Added a counter for how many times the page is opened. Showed how to render a variable in the template.

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,9 @@
       <div class="page-header">
         <h1>Hooooooooooo!</h1>
       </div>
-      <p class="lead">Aren't templates awesome? :D</p>
+      <p class="lead">Keeping a count of how many times this page was opened:
+      {{ count_variable_visible_in_template }}
+      </p>
     </div>
 
     <footer class="footer">
