--- a/templates/home.html
+++ b/templates/home.html
@@ -24,8 +24,12 @@
       <div class="page-header">
         <h1>Hooooooooooo!</h1>
       </div>
+      {% if i_trust_you %}
       <p class="lead">Keeping a count of how many times this page was opened:
       {{ count_variable_visible_in_template }}
+      {% else %}
+      <p class="lead">Who you?</p>
+      {% endif %}
       </p>
     </div>
 
