Added a danger link. Increment a counter whenever this button is pressed

--- a/templates/home.html
+++ b/templates/home.html
@@ -33,6 +33,14 @@
       </p>
     </div>
 
+    <div class="container">
+      <div class="page-header">
+        <h1>Oooh, what does this button do?</h1>
+      </div>
+      <p class="lead"><a href="/increment">Danger.</a></p>
+      <p class="lead">Badass count: {{ button_count }}</p>
+    </div>
+
     <footer class="footer">
       <div class="container">
         <p class="text-muted">Visit <a href="http://byld.iiitd.edu.in">us</a>.</p>
