--- a/templates/home.html
+++ b/templates/home.html
@@ -41,6 +41,13 @@
       <p class="lead">Badass count: {{ button_count }}</p>
     </div>
 
+    <div class="container">
+      <div class="page-header">
+        <h1>Admin login</h1>
+      </div>
+      <p class="lead"><a href="/login">Login here.</a></p>
+    </div>
+
     <footer class="footer">
       <div class="container">
         <p class="text-muted">Visit <a href="http://byld.iiitd.edu.in">us</a>.</p>
